--- a/ui/package.json
+++ b/ui/package.json
@@ -23,6 +23,7 @@
     "alcaeus": "1.0.0-RC.4",
     "buefy": "^0.9.2",
     "bulma-quickview": "^2.0.0",
+    "cookie-storage": "^6.1.0",
     "core-js": "^3.6.5",
     "oidc-client": "^1.11.0-beta.2",
     "vue": "^2.6.11",
