--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -39,7 +39,7 @@
     "http-problem-details": "^0.1.5",
     "http-problem-details-mapper": "^0.1.6",
     "hydra-box": "zazuko/hydra-box#api-handler-errors",
-    "isstream": "^0.1.2",
+    "is-stream": "^2",
     "jwks-rsa": "^1.9.0",
     "merge-stream": "^2.0.0",
     "middleware-async": "^1.2.7",
@@ -67,7 +67,6 @@
     "@types/express": "^4.17.8",
     "@types/express-jwt": "^0.0.42",
     "@types/http-errors": "^1.8.0",
-    "@types/isstream": "^0.1.0",
     "@types/merge-stream": "^1.1.2",
     "@types/mocha": "^8.0.3",
     "@types/node-fetch": "^2.5.7",
