--- a/cli/package.json
+++ b/cli/package.json
@@ -32,10 +32,11 @@
     "duplex-to": "^1.0.0",
     "express": "^4.17.1",
     "get-stream": "^5.1.0",
-    "isstream": "^0.1.2",
+    "is-stream": "^2.0.0",
     "node-fetch": "^2.6.1",
     "null-writable": "^1.0.5",
     "once": "^1.4.0",
+    "promise-the-world": "^1.0.1",
     "rdf-ext": "^1.3.0",
     "readable-stream": "^3.6.0",
     "ssz-data": "StatistikStadtZuerich/ld-data#barnard59",
@@ -50,7 +51,6 @@
     "@tpluscode/sparql-builder": "^0.3.9",
     "@types/clownface": "^1.0.3",
     "@types/debug": "^4.1.5",
-    "@types/isstream": "^0.1.0",
     "@types/node-fetch": "^2.5.7",
     "@types/once": "^1.4.0",
     "@types/rdf-ext": "^1.3.5",
