--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   ],
   "devDependencies": {
     "@tpluscode/eslint-config": "^0.1.1",
+    "@types/node": "^14.14.7",
+    "@types/webpack-env": "^1.15.3",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "c8": "^7.3.5",
