--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.2",
   "private": true,
   "dependencies": {
-    "@rdf-esm/namespace": "^0.5.1"
+    "@rdf-esm/namespace": "^0.5.1",
+    "@zazuko/rdf-vocabularies": "^2020.11.3"
   },
   "devDependencies": {
     "@types/rdf-js": "^4.0.0"
