--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -46,6 +46,7 @@
     "node-fetch": "^2.6.1",
     "rdf-ext": "^1.3.0",
     "rdf-validate-shacl": "^0.2.3",
+    "slug": "^4.0.2",
     "sparql-http-client": "^2.2.2",
     "string-to-stream": "^3.0.1",
     "url-slugify": "^1.0.6"
@@ -76,6 +77,7 @@
     "@types/rdfjs__term-map": "^1.0.0",
     "@types/sinon": "^9.0.5",
     "@types/sinon-chai": "^3.2.4",
+    "@types/slug": "^0.9.1",
     "@types/sparql-http-client": "^2",
     "@types/supertest": "^2.0.10",
     "@types/url-slugify": "^1.0.0",
