--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -45,6 +45,7 @@
     "middleware-async": "^1.2.7",
     "nanoid": "^3.1.16",
     "node-fetch": "^2.6.1",
+    "rdf-cube-view-query": "zazuko/rdf-cube-view-query",
     "rdf-ext": "^1.3.0",
     "rdf-validate-shacl": "^0.2.3",
     "slug": "^4.0.2",
