--- a/cli/package.json
+++ b/cli/package.json
@@ -16,6 +16,8 @@
     "@rdfine/schema": "^0.5.1",
     "@rdfjs/fetch-lite": "^2.0.1",
     "@rdfjs/namespace": "^1.1.0",
+    "@rdfjs/term-map": "^1.0.0",
+    "@rdfjs/term-set": "^1.0.1",
     "@tpluscode/rdf-ns-builders": "^0.4",
     "@tpluscode/rdfine": "^0.5.15",
     "alcaeus": "^1.0.0-RC.2",
@@ -24,6 +26,7 @@
     "barnard59-base": "^0.0.4",
     "barnard59-formats": "^0.0.7",
     "barnard59-graph-store": "^0.0.6",
+    "barnard59-rdf": "zazuko/barnard59-rdf#cube-to-observation",
     "body-parser": "^1.19.0",
     "clownface": "^1",
     "commander": "^4.1.1",
@@ -38,8 +41,8 @@
     "null-writable": "^1.0.5",
     "once": "^1.4.0",
     "rdf-ext": "^1.3.0",
+    "rdf-stream-to-dataset-stream": "^1.0.0",
     "readable-stream": "^3.6.0",
-    "ssz-data": "StatistikStadtZuerich/ld-data#barnard59",
     "string-to-stream": "^3.0.1",
     "through2-reduce": "1.1.1"
   },
