--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "cookie-storage": "^6.1.0",
     "core-js": "^3.6.5",
     "oidc-client": "^1.11.0-beta.2",
+    "slugify": "^1.4.6",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.6",
     "vue-color": "^2.7.1",
