--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -10,7 +10,7 @@ on:
 
 env:
   GITHUB_EVENT_NAME: ${{ github.event.number }}
-  DEFUALT_BRANCH: ${{ github.event.repository.default_branch }}
+  DEFAULT_BRANCH: ${{ github.event.repository.default_branch }}
 
 jobs:
   build-api:
