--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@cube-creator/core": "*",
     "@cube-creator/model": "*",
-    "@hydrofoil/labyrinth": "^0.1.12",
+    "@hydrofoil/labyrinth": "^0.1.13",
     "@rdfine/csvw": "^0.5.1",
     "@rdfine/hydra": "^0.5.1",
     "@rdfine/schema": "^0.5.2",
@@ -40,7 +40,7 @@
     "http-errors": "^1.8.0",
     "http-problem-details": "^0.1.5",
     "http-problem-details-mapper": "^0.1.6",
-    "hydra-box": "zazuko/hydra-box#api-handler-errors",
+    "hydra-box": "zazuko/hydra-box#property-operations-responses",
     "is-stream": "^2",
     "jwks-rsa": "^1.9.0",
     "middleware-async": "^1.2.7",
