build: update lando

--- a/.local.env
+++ b/.local.env
@@ -5,9 +5,9 @@ API_CORE_BASE=https://cube-creator.lndo.site/
 UI_BASE=https://app.cube-creator.lndo.site/
 
 # SPARQL endpoints
-STORE_QUERY_ENDPOINT=http://store:3030/cube-creator/query
-STORE_UPDATE_ENDPOINT=http://store:3030/cube-creator/update
-STORE_GRAPH_ENDPOINT=http://store:3030/cube-creator/data
+STORE_QUERY_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/query
+STORE_UPDATE_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/update
+STORE_GRAPH_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/data
 PUBLIC_QUERY_ENDPOINT=https://test.lindas.admin.ch/query
 TRIFID_UI=https://lindas.admin.ch/sparql
 
@@ -24,7 +24,7 @@ VUE_APP_AUTH_CLIENT_ID=cube-creator
 VUE_APP_API_CORE_BASE=https://cube-creator.lndo.site/
 
 # S3 config
-AWS_S3_ENDPOINT=http://s3.cube-creator.lndo.site:9000
+AWS_S3_ENDPOINT=http://s3.cube-creator.lndo.site
 AWS_S3_BUCKET=cube-creator
 AWS_ACCESS_KEY_ID=minio
 AWS_SECRET_ACCESS_KEY=password
@@ -37,9 +37,9 @@ PIPELINE_URI=http://pipeline.cube-creator.lndo.site
 MANAGED_DIMENSIONS_GRAPH=https://lindas.admin.ch/cube/dimension
 MANAGED_DIMENSIONS_API_BASE=https://cube-creator.lndo.site/
 MANAGED_DIMENSIONS_BASE=https://ld.admin.ch/cube/
-MANAGED_DIMENSIONS_STORE_QUERY_ENDPOINT=http://store:3030/shared-dimensions/query
-MANAGED_DIMENSIONS_STORE_UPDATE_ENDPOINT=http://store:3030/shared-dimensions/update
-MANAGED_DIMENSIONS_STORE_GRAPH_ENDPOINT=http://store:3030/shared-dimensions/data
+MANAGED_DIMENSIONS_STORE_QUERY_ENDPOINT=http://db.cube-creator.lndo.site/shared-dimensions/query
+MANAGED_DIMENSIONS_STORE_UPDATE_ENDPOINT=http://db.cube-creator.lndo.site/shared-dimensions/update
+MANAGED_DIMENSIONS_STORE_GRAPH_ENDPOINT=http://db.cube-creator.lndo.site/shared-dimensions/data
 
 # PX Cube sample
 PX_CUBE_BASE=https://environment.ld.admin.ch/foen/example/px-cube/
