--- a/cli/package.json
+++ b/cli/package.json
@@ -61,7 +61,6 @@
     "@cube-creator/testing": "^0.1.18",
     "@tpluscode/rdf-ns-builders": "^0.4",
     "@tpluscode/rdf-string": "^0.2.21",
-    "@tpluscode/sparql-builder": "^0.3.10",
     "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.13",
     "@types/chai-as-promised": "^7.1.3",
@@ -90,8 +89,7 @@
     "chai-quantifiers": "^1.0.13",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^3.1.0",
-    "mocha": "^8.1.3",
-    "sparql-http-client": "^2.2.2"
+    "mocha": "^8.1.3"
   },
   "repository": {
     "type": "git",
