--- a/.github/workflows/docker-app.yaml
+++ b/.github/workflows/docker-app.yaml
@@ -26,18 +26,19 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-app-
 
-      - name: Login to Docker Hub
+      - name: Login to GitHub Container Registry
         uses: docker/login-action@v1
         if: github.event_name != 'pull_request'
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Generate image metadata
         uses: zazuko/action-docker-meta@main
         id: docker_meta
         with:
-          images: zazuko/cube-creator-app
+          images: ghcr.io/zazuko/cube-creator-app
           strip-tag-prefix: cube-creator-app/
 
       - name: Build and push
