--- a/cli/package.json
+++ b/cli/package.json
@@ -26,16 +26,15 @@
     "@tpluscode/sparql-builder": "^0.3.13",
     "alcaeus": "^1.0.1",
     "aws-sdk": "^2.559.0",
-    "barnard59": "^0.1.2",
-    "barnard59-base": "^0.1.1",
-    "barnard59-formats": "^0.1.1",
-    "barnard59-graph-store": "^0.1.1",
-    "barnard59-rdf": "^0.2.0",
+    "barnard59": "^1.1.0",
+    "barnard59-base": "^1.1.0",
+    "barnard59-formats": "^1.1.0",
+    "barnard59-graph-store": "^1.0.0",
+    "barnard59-rdf": "^1.0.0",
     "body-parser": "^1.19.0",
     "clownface": "^1",
     "commander": "^4.1.1",
     "cors": "^2.8.5",
-    "debug": "^4.1.1",
     "duplex-to": "^1.0.0",
     "express": "^4.17.1",
     "get-stream": "^5.1.0",
@@ -50,12 +49,14 @@
     "rdf-ext": "^1.3.0",
     "rdf-parser-csvw": "^0.14.4",
     "rdf-stream-to-dataset-stream": "^1.0.0",
+    "rdf-utils-fs": "^2.1.0",
     "rdf-validate-datatype": "^0.1.3",
     "readable-stream": "^3.6.0",
     "sparql-http-client": "^2.4.0",
     "string-to-stream": "^3.0.1",
     "through2": "^4.0.2",
-    "through2-reduce": "1.1.1"
+    "through2-reduce": "1.1.1",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "@cube-creator/testing": "^0.1.18",
@@ -67,7 +68,6 @@
     "@types/chai-quantifiers": "^1.0.0",
     "@types/clownface": "^1.0.3",
     "@types/cors": "^2.8.7",
-    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.9",
     "@types/merge2": "^1.3.0",
     "@types/mocha": "^8.0.3",
@@ -85,8 +85,7 @@
     "@types/readable-stream": "^2.3.9",
     "@types/sparql-http-client": "^2",
     "@types/through2": "^2.0.36",
-    "chai": "^4.2.0",
-    "chai-quantifiers": "^1.0.13",
+    "chai": "^4.3.4",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^3.1.0",
     "mocha": "^8.1.3"
