--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
     "c8": "^7.3.5",
+    "chai-quantifiers": "^1.0.13",
     "dotenv": "^8.2.0",
     "eslint": "^7.11.0",
     "eslint-config-standard": "^16.0.0",
