--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -39,19 +39,19 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1.4.4
         with:
-          node-version: 13
+          node-version: 14
       - run: yarn install --ci
       - run: yarn lint
       - run: yarn workspace @cube-creator/ui lint
 
   e2e-tests:
-    runs-on: [ubuntu-latest]
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1.4.4
         with:
-          node-version: 13
+          node-version: 14
       - run: yarn install --ci
       - name: setup-docker
         uses: docker-practice/actions-setup-docker@1.0.4
