--- a/cli/package.json
+++ b/cli/package.json
@@ -68,6 +68,7 @@
     "@types/chai-quantifiers": "^1.0.0",
     "@types/clownface": "^1.0.3",
     "@types/cors": "^2.8.7",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.9",
     "@types/merge2": "^1.3.0",
     "@types/mocha": "^8.0.3",
