--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "eslint-plugin-vue": "^7.1.0",
     "standard": "^14.3.4",
     "ts-node": "^9.0.0",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "winston": "^3.3.3"
   },
   "mocha": {
     "extension": "ts",
