--- a/cli/package.json
+++ b/cli/package.json
@@ -97,7 +97,8 @@
     "chai": "^4.3.4",
     "dotenv": "^8.2.0",
     "dotenv-cli": "^3.1.0",
-    "mocha": "^8.1.3"
+    "mocha": "^8.1.3",
+    "winston2": "npm:winston@2.4.5"
   },
   "repository": {
     "type": "git",
