--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,9 +8,10 @@ jobs:
     timeout-minutes: 45
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1.4.4
+      - uses: actions/setup-node@v2.4.0
         with:
           node-version: 14
+          cache: 'yarn'
       - run: yarn install --ci
       - run: yarn test
       - name: setup-docker
@@ -37,9 +38,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1.4.4
+      - uses: actions/setup-node@v2.4.0
         with:
-          node-version: 13
+          node-version: 14
+          cache: 'yarn'
       - run: yarn install --ci
       - run: yarn lint
       - run: yarn workspace @cube-creator/ui lint
@@ -49,9 +51,10 @@ jobs:
     timeout-minutes: 30
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1.4.4
+      - uses: actions/setup-node@v2.4.0
         with:
-          node-version: 13
+          node-version: 14
+          cache: 'yarn'
       - run: yarn install --ci
       - name: setup-docker
         uses: docker-practice/actions-setup-docker@1.0.4
