--- a/cli/package.json
+++ b/cli/package.json
@@ -36,7 +36,7 @@
     "@tpluscode/sparql-builder": "^0.3.13",
     "alcaeus": "^1.0.1",
     "aws-sdk": "^2.559.0",
-    "barnard59": "^1.1.0",
+    "barnard59": "github:zazuko/barnard59#otel-improvements",
     "barnard59-base": "^1.1.0",
     "barnard59-formats": "^1.1.0",
     "barnard59-graph-store": "^1.0.0",
