--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "@rdfjs/term-set": "^1.0.1",
     "@sentry/tracing": "^6.2.0",
     "@sentry/vue": "^6.2.0",
+    "@tinyhttp/content-disposition": "^2.0.0",
     "@tpluscode/rdf-ns-builders": "^1.0.0",
     "@tpluscode/rdfine": "^0.5.19",
     "@uppy/aws-s3-multipart": "^1.8.18",
