--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test:e2e": "docker-compose run --rm e2e-tests --",
     "seed-data": "dotenv -e .local.env -- bash -c \"ts-node packages/testing/index.ts -i ubd dimensions px-cube\"",
     "repro:fuseki": "dotenv -e cli/.env sh test.sh cli/pipelines/publish.ttl",
+    "repro:fetch": "dotenv -e cli/.env sh test.sh cli/pipelines/publish-fetch.ttl",
+    "repro:from-fs": "dotenv -e cli/.env sh test.sh cli/pipelines/publish-from-fs.ttl",
     "repro:fs": "dotenv -e cli/.env sh test.sh cli/pipelines/publish-fs.ttl"
   },
   "workspaces": [
