--- a/cli/package.json
+++ b/cli/package.json
@@ -13,15 +13,15 @@
     "@cube-creator/core": "0.3.2",
     "@cube-creator/model": "0.1.19",
     "@opentelemetry/api": "^1.0.2",
-    "@opentelemetry/api-metrics": "^0.22.0",
-    "@opentelemetry/exporter-collector": "^0.22.0",
-    "@opentelemetry/instrumentation-http": "^0.22.0",
-    "@opentelemetry/instrumentation-winston": "^0.22.0",
-    "@opentelemetry/metrics": "^0.22.0",
-    "@opentelemetry/resources": "^0.22.0",
-    "@opentelemetry/sdk-node": "^0.22.0",
-    "@opentelemetry/semantic-conventions": "^0.22.0",
-    "@opentelemetry/tracing": "^0.22.0",
+    "@opentelemetry/api-metrics": "^0.24.0",
+    "@opentelemetry/exporter-collector": "^0.24.0",
+    "@opentelemetry/instrumentation-http": "^0.24.0",
+    "@opentelemetry/instrumentation-winston": "^0.24.0",
+    "@opentelemetry/metrics": "^0.24.0",
+    "@opentelemetry/resources": "^0.24.0",
+    "@opentelemetry/sdk-node": "^0.24.0",
+    "@opentelemetry/semantic-conventions": "^0.24.0",
+    "@opentelemetry/tracing": "^0.24.0",
     "@rdfine/csvw": "^0.6.3",
     "@rdfine/prov": "^0.1.1",
     "@rdfine/schema": "^0.6.3",
@@ -36,7 +36,7 @@
     "@tpluscode/sparql-builder": "^0.3.13",
     "alcaeus": "^1.0.1",
     "aws-sdk": "^2.559.0",
-    "barnard59": "github:zazuko/barnard59#otel-improvements",
+    "barnard59": "github:zazuko/barnard59#96661496cd8005d1a3da712cd3363ead0a573ca9",
     "barnard59-base": "^1.1.0",
     "barnard59-formats": "^1.1.0",
     "barnard59-graph-store": "^1.0.0",
