--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -15,13 +15,13 @@
     "@rdfine/hydra": "^0.7.0",
     "@rdfine/prov": "^0.1.1",
     "@rdfine/schema": "^0.6.3",
+    "@rdfjs-elements/formats-pretty": "^0.3.2",
     "@rdfjs/express-handler": "^1.2.1",
     "@rdfjs/fetch": "^2.1.0",
     "@rdfjs/namespace": "^1.1.0",
     "@rdfjs/parser-n3": "^1.1.4",
     "@rdfjs/term-map": "^1.0.0",
     "@rdfjs/term-set": "^1.0.1",
-    "@rdfjs-elements/formats-pretty": "^0.3.2",
     "@sentry/node": "^6.2.0",
     "@sentry/tracing": "^6.2.0",
     "@tpluscode/rdf-ns-builders": "^1.0.0",
@@ -65,7 +65,8 @@
     "string-to-stream": "^3.0.1",
     "through2": "^4.0.2",
     "uri-template": "^1.0.1",
-    "url-slugify": "^1.0.6"
+    "url-slugify": "^1.0.6",
+    "xmlbuilder2": "^3.0.2"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.11.5",
