--- a/cli/package.json
+++ b/cli/package.json
@@ -73,6 +73,8 @@
     "@tpluscode/rdf-ns-builders": "^1.0.0",
     "@tpluscode/rdf-string": "^0.2.21",
     "@tpluscode/sparql-builder": "^0.3.15",
+    "@types/barnard59": "^1.0.0",
+    "@types/barnard59-core": "^1.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.13",
     "@types/chai-as-promised": "^7.1.3",
@@ -94,7 +96,7 @@
     "@types/rdfjs__sink-map": "^1.0.0",
     "@types/rdfjs__term-map": "^1.0.1",
     "@types/rdfjs__term-set": "^1.0.2",
-    "@types/readable-stream": "^2.3.9",
+    "@types/readable-stream": "^2.3.11",
     "@types/sparql-http-client": "^2",
     "@types/through2": "^2.0.36",
     "chai": "^4.3.4",
