--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -43,6 +43,7 @@
     "csv-sniffer": "^0.1.1",
     "debug": "^4.1.1",
     "express": "^4.17.1",
+    "express-conditional-middleware": "^2.1.1",
     "express-jwt": "^6.0.0",
     "express-jwt-permissions": "^1.3.3",
     "express-rdf-request": "0.1.0",
@@ -54,6 +55,7 @@
     "jwks-rsa": "^1.9.0",
     "merge2": "^1.4.1",
     "middleware-async": "^1.2.7",
+    "multer": "^1.4.3",
     "nanoid": "^3.1.16",
     "node-fetch": "^2.6.1",
     "once": "^1.4.0",
@@ -86,6 +88,7 @@
     "@types/merge-stream": "^1.1.2",
     "@types/merge2": "^1.3.0",
     "@types/mocha": "^9.0.0",
+    "@types/multer": "^1.4.7",
     "@types/node-fetch": "^2.5.7",
     "@types/once": "^1.4.0",
     "@types/rdf-ext": "^1.3.8",
