--- a/ui/package.json
+++ b/ui/package.json
@@ -61,6 +61,7 @@
     "@cypress/webpack-preprocessor": "^5.4.10",
     "@types/clownface": "^1.0.3",
     "@types/debounce": "^1.2.0",
+    "@types/rdf-ext": "^1.3.11",
     "@types/rdf-js": "^4",
     "@types/rdfjs__dataset": "^1.0.4",
     "@types/rdfjs__term-set": "^1.0.2",
