--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -21,13 +21,13 @@
     "@rdfjs/parser-n3": "^1.1.4",
     "@rdfjs/term-map": "^1.0.0",
     "@rdfjs/term-set": "^1.0.1",
-    "@rdfjs-elements/formats-pretty": "^0.3.2",
+    "@rdfjs-elements/formats-pretty": "^0.3.3",
     "@sentry/node": "^6.2.0",
     "@sentry/tracing": "^6.2.0",
     "@tpluscode/rdf-ns-builders": "^1.0.0",
     "@tpluscode/rdf-string": "^0.2.23",
     "@tpluscode/rdfine": "^0.5.23",
-    "@tpluscode/sparql-builder": "^0.3.15",
+    "@tpluscode/sparql-builder": "^0.3.16",
     "@types/content-disposition": "^0.5.3",
     "@types/rdfjs__term-set": "^1.0.2",
     "@types/set-link": "^1.0.1",
@@ -55,6 +55,7 @@
     "jwks-rsa": "^1.9.0",
     "merge2": "^1.4.1",
     "middleware-async": "^1.2.7",
+    "mime-types": "^2",
     "multer": "^1.4.3",
     "nanoid": "^3.1.16",
     "node-fetch": "^2.6.1",
@@ -87,6 +88,7 @@
     "@types/http-errors": "^1.8.0",
     "@types/merge-stream": "^1.1.2",
     "@types/merge2": "^1.3.0",
+    "@types/mime-types": "^2",
     "@types/mocha": "^9.0.0",
     "@types/multer": "^1.4.7",
     "@types/node-fetch": "^2.5.7",
