--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -84,6 +84,7 @@
     "@types/cors": "^2.8.7",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.8",
+    "@types/express-conditional-middleware": "^2.1.0",
     "@types/express-jwt": "^0.0.42",
     "@types/http-errors": "^1.8.0",
     "@types/merge-stream": "^1.1.2",
