--- a/.lando.yml
+++ b/.lando.yml
@@ -46,7 +46,7 @@ services:
         retries: 3
   s3:
     type: compose
-    ssl: false
+    ssl: true
     services:
       image: minio/minio:RELEASE.2020-12-03T05-49-24Z
       command: usr/bin/docker-entrypoint.sh server /data
