--- a/cli/package.json
+++ b/cli/package.json
@@ -73,8 +73,10 @@
     "@tpluscode/rdf-ns-builders": "^1.0.0",
     "@tpluscode/rdf-string": "^0.2.21",
     "@tpluscode/sparql-builder": "^0.3.15",
-    "@types/barnard59": "^1.0.0",
-    "@types/barnard59-core": "^1.0.0",
+    "@types/barnard59": "^1.0.1",
+    "@types/barnard59-base": "^1.0.1",
+    "@types/barnard59-core": "^1.0.2",
+    "@types/barnard59-graph-store": "^1.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.13",
     "@types/chai-as-promised": "^7.1.3",
