--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@cube-creator/api-errors": "0.0.4",
     "@cube-creator/core": "0.3.3",
+    "@cube-creator/express": "0.0.0",
     "@cube-creator/model": "0.1.20",
     "@cube-creator/shared-dimensions-api": "2.2.0",
     "@hydrofoil/labyrinth": "^0.4.1",
@@ -55,7 +56,6 @@
     "jwks-rsa": "^1.9.0",
     "merge2": "^1.4.1",
     "middleware-async": "^1.2.7",
-    "mime-types": "^2",
     "multer": "^1.4.3",
     "nanoid": "^3.1.16",
     "node-fetch": "^2.6.1",
@@ -89,7 +89,6 @@
     "@types/http-errors": "^1.8.0",
     "@types/merge-stream": "^1.1.2",
     "@types/merge2": "^1.3.0",
-    "@types/mime-types": "^2",
     "@types/mocha": "^9.0.0",
     "@types/multer": "^1.4.7",
     "@types/node-fetch": "^2.5.7",
