--- a/apis/shared-dimensions/package.json
+++ b/apis/shared-dimensions/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@cube-creator/api-errors": "0.0.4",
     "@cube-creator/core": "0.3.3",
+    "@cube-creator/express": "0.0.0",
     "@hydrofoil/labyrinth": "^0.4.1",
     "@rdfine/rdfs": "^0.6.4",
     "@rdfine/schema": "^0.6.3",
@@ -23,14 +24,17 @@
     "cors": "^2.8.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
+    "express-conditional-middleware": "^2.1.1",
     "http-errors": "^1.8.0",
     "http-status": "^1.5.0",
     "hydra-box-middleware-shacl": "1.0.0",
     "middleware-async": "^1.2.7",
+    "multer": "^1.4.3",
     "nanoid": "^3.1.23",
     "once": "^1.4.0",
     "rdf-ext": "^1.3.0",
     "rdf-literal": "^1.2.0",
+    "rdf-validate-shacl": "^0.3.2",
     "sparql-http-client": "^2.2.2",
     "through2": "^2.0.5"
   },
