feat: add link to visualize.admin.ch
Display link to visualize.admin.ch on publication job when cube is
published to visualize.

--- a/.local.env
+++ b/.local.env
@@ -10,6 +10,7 @@ STORE_UPDATE_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/update
 STORE_GRAPH_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/data
 PUBLIC_QUERY_ENDPOINT=https://test.lindas.admin.ch/query
 TRIFID_UI=https://lindas.admin.ch/sparql
+VISUALIZE_UI=https://visualize.admin.ch
 
 # AuthN config
 AUTH_AUDIENCE=cube-creator
