--- a/cli/package.json
+++ b/cli/package.json
@@ -40,6 +40,7 @@
     "express": "^4.17.1",
     "get-stream": "^5.1.0",
     "is-stream": "^2.0.0",
+    "iso8601-duration": "^1.3.0",
     "merge2": "^1.4.1",
     "middleware-async": "^1.2.7",
     "nanoid": "^3.1.20",
@@ -48,6 +49,7 @@
     "null-writable": "^1.0.5",
     "once": "^1.4.0",
     "rdf-ext": "^1.3.0",
+    "rdf-literal": "^1.3.0",
     "rdf-parser-csvw": "^0.14.4",
     "rdf-stream-to-dataset-stream": "^1.0.0",
     "rdf-validate-datatype": "^0.1.3",
@@ -84,6 +86,7 @@
     "@types/rdfjs__term-map": "^1.0.1",
     "@types/rdfjs__term-set": "^1.0.2",
     "@types/readable-stream": "^2.3.9",
+    "@types/sinon": "^10.0.2",
     "@types/sparql-http-client": "^2",
     "@types/through2": "^2.0.36",
     "chai": "^4.2.0",
@@ -91,6 +94,7 @@
     "dotenv": "^8.2.0",
     "dotenv-cli": "^3.1.0",
     "mocha": "^9.0.0",
+    "sinon": "^11.1.2",
     "sparql-http-client": "^2.2.2"
   },
   "repository": {
