--- a/cli/package.json
+++ b/cli/package.json
@@ -84,6 +84,7 @@
     "@types/clownface": "^1.0.3",
     "@types/cors": "^2.8.7",
     "@types/debug": "^4.1.5",
+    "@types/duplex-to": "^1.0.0",
     "@types/express": "^4.17.9",
     "@types/merge2": "^1.3.0",
     "@types/mocha": "^9.0.0",
@@ -92,6 +93,7 @@
     "@types/once": "^1.4.0",
     "@types/rdf-ext": "^1.3.5",
     "@types/rdf-js": "^4",
+    "@types/rdf-utils-fs": "^2.1.0",
     "@types/rdf-validate-datatype": "^0.1",
     "@types/rdfjs__formats-common": "^2.0.0",
     "@types/rdfjs__namespace": "^1.1.1",
