--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -100,6 +100,7 @@
     "@types/sinon": "^10.0.0",
     "@types/sinon-chai": "^3.2.4",
     "@types/slug": "^0.9.1",
+    "@types/sparqljs": "^3.1.3",
     "@types/sparql-http-client": "^2",
     "@types/supertest": "^2.0.10",
     "@types/through2": "^2.0.36",
@@ -108,8 +109,10 @@
     "chai-as-promised": "^7.1.1",
     "chai-snapshot-matcher": "^2.0.0",
     "mocha": "^9.0.0",
+    "rdf-literal": "^1.3.0",
     "sinon": "^11.0.0",
     "sinon-chai": "^3.5.0",
+    "sparqljs": "^3.5.1",
     "supertest": "^4.0.2"
   }
 }
