--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -55,6 +55,7 @@
     "nanoid": "^3.1.16",
     "node-fetch": "^2.6.1",
     "once": "^1.4.0",
+    "parse-prefer-header": "^1.0.0",
     "rdf-cube-view-query": "^1",
     "rdf-ext": "^1.3.0",
     "set-link": "^1.0.0",
@@ -87,6 +88,7 @@
     "@types/mocha": "^9.0.0",
     "@types/node-fetch": "^2.5.7",
     "@types/once": "^1.4.0",
+    "@types/parse-prefer-header": "^1.0.1",
     "@types/rdf-ext": "^1.3.8",
     "@types/rdf-js": "^4.0.0",
     "@types/rdf-transform-triple-to-quad": "^1.0.0",
