--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,6 +7,7 @@
     "@rdf-esm/namespace": "^0.5.2",
     "@rdfjs/parser-n3": "^1.1.4",
     "@tpluscode/rdf-string": "^0.2.21",
+    "@tpluscode/rdf-ns-builders": "^1.0.0",
     "@zazuko/rdf-vocabularies": "^2021.3.17",
     "rdf-ext": "^1.3.0",
     "sparql-http-client": "^2.2.2",
