--- a/apis/shared-dimensions/package.json
+++ b/apis/shared-dimensions/package.json
@@ -31,6 +31,7 @@
     "middleware-async": "^1.2.7",
     "nanoid": "^3.1.23",
     "once": "^1.4.0",
+    "parse-prefer-header": "^1.0.0",
     "rdf-ext": "^1.3.0",
     "rdf-literal": "^1.2.0",
     "rdf-validate-shacl": "^0.3.2",
@@ -40,6 +41,7 @@
   "devDependencies": {
     "@cube-creator/testing": "^0.1.19",
     "@types/camouflage-rewrite": "^1.2.0",
+    "@types/parse-prefer-header": "^1.0.0",
     "@types/sinon": "^10.0.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
