--- a/packages/model/package.json
+++ b/packages/model/package.json
@@ -18,6 +18,7 @@
     "@types/clownface": "^1",
     "@types/is-uri": "^1",
     "@types/rdf-js": "^4.0.0",
+    "alcaeus": "^2",
     "chai": "^4.3.4",
     "mocha": "^9.0.3"
   }
