--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-vue": "^7.1.0",
+    "nodemon": "^2.0.15",
     "standard": "^16.0.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3",
