--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -29,7 +29,7 @@ jobs:
           private_key: ${{ secrets.GH_PRIVATE_KEY }}
 
       - name: Create Release Pull Request
-        uses: changesets/action@master
+        uses: changesets/action@v1
         env:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
         with:
