--- a/cli/.test.env
+++ b/cli/.test.env
@@ -3,6 +3,7 @@ PUBLISH_JOB=https://cube-creator.lndo.site/cube-project/ubd/csv-mapping/jobs/tes
 
 AUTH_RUNNER_CLIENT_ID=cube-creator-runner
 AUTH_RUNNER_ISSUER=https://keycloak.zazukoians.org/realms/zazuko-dev
+AUTH_RUNNER_CLIENT_SECRET=private
 
 GRAPH_QUERY_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/query
 GRAPH_STORE_ENDPOINT=http://db.cube-creator.lndo.site/cube-creator/data
