--- a/apis/core/package.json
+++ b/apis/core/package.json
@@ -46,7 +46,7 @@
     "express-jwt-permissions": "^1.3.3",
     "express-rdf-request": "0.1.0",
     "http-errors": "^1.8.0",
-    "hydra-box": "zazuko/hydra-box#subpath-api-link",
+    "hydra-box": "^0.6.4",
     "hydra-box-middleware-shacl": "1.1.0",
     "is-stream": "^2",
     "jwks-rsa": "^2.0.5",
