--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "lint": "eslint . --ext .ts,.vue,.tsx --quiet --ignore-path .gitignore",
     "test": "c8 -o coverage/apis mocha --recursive apis/**/*.test.ts packages/**/*.test.ts --grep @SPARQL --invert",
-    "test:queries": "c8 -o coverage/queries mocha --recursive apis/**/*.test.ts --grep @SPARQL",
+    "test:queries": "c8 -o coverage/queries mocha --recursive apis/**/*.test.ts ui/**/*.test.ts --grep @SPARQL",
     "test:cli": "c8 -o coverage/cli mocha --recursive cli/**/*.test.ts",
     "test:e2e": "docker-compose run --rm e2e-tests --",
     "seed-data": "dotenv -e .local.env -- bash -c \"ts-node packages/testing/index.ts -i ubd dimensions px-cube\""
