--- a/apis/shared-dimensions/package.json
+++ b/apis/shared-dimensions/package.json
@@ -7,6 +7,7 @@
     "@cube-creator/core": "0.3.3",
     "@cube-creator/express": "0.0.0",
     "@hydrofoil/labyrinth": "^0.4.1",
+    "@rdfine/hydra": "^0.8.2",
     "@rdfine/rdfs": "^0.6.4",
     "@rdfine/schema": "^0.6.3",
     "@rdfine/shacl": "^0.8",
